compiler/test/fail/math_string_args.js
Math.atan2("1", "2");
